[gd_scene load_steps=4 format=2]

[ext_resource path="res://world/ui/Sonar.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/ui/sonar_line.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/ui/danger_spot.png" type="Texture" id=4]

[node name="Sonar" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="ScanLine" type="Area2D" parent="."]
position = Vector2( 257.142, 258.402 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ScanLine"]
polygon = PoolVector2Array( 0, 0, 250, 0, 250, 10 )

[node name="Sprite" type="Sprite" parent="ScanLine"]
modulate = Color( 0, 1, 0, 1 )
texture = ExtResource( 2 )

[node name="Center" type="Sprite" parent="ScanLine"]
modulate = Color( 0, 1, 0, 1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="LinesContainer" type="Node2D" parent="."]
position = Vector2( 257.142, 258.402 )

[node name="DangerContainer" type="Node2D" parent="."]
position = Vector2( 257.142, 258.402 )

[node name="DangerPositionTween" type="Tween" parent="."]
[connection signal="body_entered" from="ScanLine" to="." method="_on_ScanLine_body_entered"]
